[package]
name = "spt-fuyu"
version = "4.0.0"
edition = "2024"
description = "SPT Fuyu - quickly bypass EFT install validate of SPT"

[lib]
name = "DWrite"
crate-type = ["cdylib"]

[dependencies]
ilhook = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
